# competitive_research_agent

./: README.md  pyproject.toml
app/: main.py
app/core/: config.py  exceptions.py
app/dependencies/: research_agent.py  search.py
app/routes/: research.py
app/schemas/: models.py
templates/: agent_prompt.jinja  report_template.jinja
