[tool.poetry]
name = "competitive-research-agent"
version = "0.1.0"
description = ""
authors = ["Jefest1 <anyanf101@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
uvicorn = "^0.34.0"
pydantic = "^2.10.5"
pydantic-settings = "^2.7.1"
langchain = "^0.3.14"
langchain-anthropic = "^0.3.1"
anthropic = "^0.43.0"
duckduckgo-search = "^7.2.1"
aiohttp = "^3.11.11"
python-dotenv = "^1.0.1"
asyncio = "^3.4.3"
google-api-python-client = "^2.159.0"
langchain-groq = "^0.2.5"
langchain-community = "^0.3.19"
google-search-results = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
